--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		}
 
 		.swiper-item .swiper-body .swiper-description {
-			font-size: 18px;
+			font-size: 24px;
 			line-height: 1.6;
 
 		}
@@ -787,10 +787,12 @@
 														<div class="swiper-item"
 															style="background-image: url(assets/img/h11-rev-background-img.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">商务部回应中美第一阶段经贸协议：双方应共同努力推动协议落实
+																<div class="swiper-title">
+																	<img style="width: 480px;"
+																		src="assets/img/h11-rev-img-2.png" alt="">
 																</div>
 																<div class="swiper-description">
-																	在今天（27日）商务部举行的例行新闻发布会上，有媒体问：美国农业部数据显示，5月7日以来中国正加快自美玉米采购，这是否意味着中方仍在而且将继续积极履行第一阶段经贸协议？对此，新闻发言人高峰表示，中美第一阶段经贸协议有利于中国，有利于美国，有利于整个世界。双方应共同努力，创造氛围和条件，推动协议落实。
+																	Empower Your Business Through Our People Expertise
 																</div>
 															</div>
 														</div>
@@ -799,10 +801,10 @@
 														<div class="swiper-item"
 															style="background-image: url(assets/img/h11-rev-background-img.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">商务部回应中美第一阶段经贸协议：双方应共同努力推动协议落实
+																<div class="swiper-title">Management Training
 																</div>
 																<div class="swiper-description">
-																	在今天（27日）商务部举行的例行新闻发布会上，有媒体问：美国农业部数据显示，5月7日以来中国正加快自美玉米采购，这是否意味着中方仍在而且将继续积极履行第一阶段经贸协议？对此，新闻发言人高峰表示，中美第一阶段经贸协议有利于中国，有利于美国，有利于整个世界。双方应共同努力，创造氛围和条件，推动协议落实。
+																	We develop people with quality training.
 																</div>
 															</div>
 														</div>
@@ -811,10 +813,10 @@
 														<div class="swiper-item"
 															style="background-image: url(assets/img/h11-rev-background-img.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">商务部回应中美第一阶段经贸协议：双方应共同努力推动协议落实
+																<div class="swiper-title">Management Training
 																</div>
 																<div class="swiper-description">
-																	在今天（27日）商务部举行的例行新闻发布会上，有媒体问：美国农业部数据显示，5月7日以来中国正加快自美玉米采购，这是否意味着中方仍在而且将继续积极履行第一阶段经贸协议？对此，新闻发言人高峰表示，中美第一阶段经贸协议有利于中国，有利于美国，有利于整个世界。双方应共同努力，创造氛围和条件，推动协议落实。
+																	We develop people with quality training.
 																</div>
 															</div>
 														</div>
@@ -823,10 +825,10 @@
 														<div class="swiper-item"
 															style="background-image: url(assets/img/h11-rev-background-img.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">商务部回应中美第一阶段经贸协议：双方应共同努力推动协议落实
+																<div class="swiper-title">Management Training
 																</div>
 																<div class="swiper-description">
-																	在今天（27日）商务部举行的例行新闻发布会上，有媒体问：美国农业部数据显示，5月7日以来中国正加快自美玉米采购，这是否意味着中方仍在而且将继续积极履行第一阶段经贸协议？对此，新闻发言人高峰表示，中美第一阶段经贸协议有利于中国，有利于美国，有利于整个世界。双方应共同努力，创造氛围和条件，推动协议落实。
+																	We develop people with quality training.
 																</div>
 															</div>
 														</div>
@@ -835,10 +837,10 @@
 														<div class="swiper-item"
 															style="background-image: url(assets/img/h11-rev-background-img.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">商务部回应中美第一阶段经贸协议：双方应共同努力推动协议落实
+																<div class="swiper-title">Management Training
 																</div>
 																<div class="swiper-description">
-																	在今天（27日）商务部举行的例行新闻发布会上，有媒体问：美国农业部数据显示，5月7日以来中国正加快自美玉米采购，这是否意味着中方仍在而且将继续积极履行第一阶段经贸协议？对此，新闻发言人高峰表示，中美第一阶段经贸协议有利于中国，有利于美国，有利于整个世界。双方应共同努力，创造氛围和条件，推动协议落实。
+																	We develop people with quality training.
 																</div>
 															</div>
 														</div>
@@ -890,7 +892,7 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
-																				<span style="font-weight: bolder;">
+																				<span>
 																					Headquartered in Shanghai, China,
 																					Yuebei
 																					Business Consulting boasts of a
@@ -938,7 +940,7 @@
 																				Our Expertise
 																			</h1>
 																			<div class="qodef-m-subtitle"
-																				style="margin-top: 17px;color: #e98b3a; font-weight: bolder;">
+																				style="margin-top: 17px;color: #e98b3a;">
 																				WE ARE DRIVEN BY QUALITY AND RESULT.
 																			</div>
 																		</div>
@@ -1201,7 +1203,7 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
-																				<span style="font-weight: bolder;">We
+																				<span>We
 																					believe quality people make
 																					difference.</span>
 																			</div>
@@ -1209,8 +1211,7 @@
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
-																				<span
-																					style="font-weight: bolder;">YUEBEI
+																				<span>YUEBEI
 																					Business Consulting possesses a
 																					large number of high caliber
 																					candidates
@@ -1227,7 +1228,7 @@
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
-																				<span style="font-weight: bolder;">
+																				<span>
 																					YUEBEI Business Consulting focuses
 																					on
 																					servicing industry clients from IT,
@@ -1272,7 +1273,7 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 30px;color: #FFFFFF">
-																				<span style="font-weight: bolder;">
+																				<span>
 																					WE HELP CHINESE COMPANIES TO GO
 																					GLOBAL
 																					WITH OUR INTERNATIONAL
@@ -1315,14 +1316,14 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
-																				<span style="font-weight: bolder;">We
+																				<span>We
 																					help bring out your best
 																					self.</span>
 																			</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
-																				<span style="font-weight: bolder;">With
+																				<span>With
 																					ICF certified holistic
 																					executive
 																					and life coaches, YUEBEI Business
@@ -1413,15 +1414,14 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
-																				<span style="font-weight: bolder;">We
+																				<span>We
 																					develop people with quality
 																					training.</span>
 																			</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
-																				<span
-																					style="font-weight: bolder;">YUEBEI
+																				<span>YUEBEI
 																					Business Consulting provides
 																					management and functional trainings
 																					to the corporate managers and
@@ -1434,8 +1434,7 @@
 
 
 																				<br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
+																				<span>YUEBEI
 																					Signature Courses:</span></div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
@@ -1482,13 +1481,13 @@
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
-																				<span style="font-weight: bolder;">We
+																				<span>We
 																					help enhance your
 																					productivity.</span>
 																			</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 30px;color: #FFFFFF">
-																				<span style="font-weight: bolder;">
+																				<span>
 																					YUEBEI’s HR Consulting services
 																					include Setting Up HR System from
 																					scratch, Establishment of HR P&P,
@@ -1531,14 +1530,13 @@
 																				style="color: #FFFFFF">
 																				Market Entry</h1>
 																			<div class="qodef-m-subtitle"
-																				style="margin-top: 17px;color: #e98b3a; font-weight: bolder;">
+																				style="margin-top: 17px;color: #e98b3a; ">
 																				We help connect the world with china.
 																			</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
-																				<span
-																					style="font-weight: bolder;">YUEBEI
+																				<span>YUEBEI
 																					Business Consulting provides market
 																					entry services to FIEs with
 																					ambition to develop in Chinese
@@ -1548,8 +1546,7 @@
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 48px;color: #e98b3a">
 
-																				<span
-																					style="font-weight: bolder;">YUEBEI
+																				<span>YUEBEI
 																					Market Entry Services
 																					include:</span></div>
 																		</div>
@@ -1562,25 +1559,25 @@
 																		<div
 																			class="elementor-text-editor elementor-clearfix">
 																			<p
-																				style="color: #ffffff; font-size: 18px; line-height: 27px; font-weight: bolder;">
+																				style="color: #ffffff; font-size: 18px; line-height: 27px; ">
 																				&#8211;
 																				Establishment of WOFE
 																				and JV
 																			</p>
 																			<p
-																				style="color: #ffffff; font-size: 18px; line-height: 27px; font-weight: bolder;">
+																				style="color: #ffffff; font-size: 18px; line-height: 27px; ">
 																				&#8211;
 																				Market Research</p>
 																			<p
-																				style="color: #ffffff; font-size: 18px; line-height: 27px; font-weight: bolder;">
+																				style="color: #ffffff; font-size: 18px; line-height: 27px; ">
 																				&#8211;
 																				Competitor Analysis</p>
 																			<p
-																				style="color: #ffffff; font-size: 18px; line-height: 27px; font-weight: bolder;">
+																				style="color: #ffffff; font-size: 18px; line-height: 27px; ">
 																				&#8211; Recruitment and HR
 																				Management</p>
 																			<p
-																				style="color: #ffffff; font-size: 18px; line-height: 27px; font-weight: bolder;">
+																				style="color: #ffffff; font-size: 18px; line-height: 27px; ">
 																				&#8211; Sales and Operation
 																				Consulting</p>
 																		</div>
@@ -1702,8 +1699,8 @@
 			<div id="qodef-page-footer-top-area">
 				<div id="qodef-page-footer-top-area-inner" class="qodef-content-grid">
 					<div class="qodef-footer-logo">
-						<img width="163" height="39" src="assets/img/logo-light-image.png"
-							class="attachment-full size-full" alt="a" /></div>
+						<img width="324" src="assets/img/logo-light-image.png" class="attachment-full size-full"
+							alt="a" /></div>
 					<div
 						class="qodef-grid qodef-layout--columns qodef-responsive--custom qodef-col-num--3 qodef-col-num--768--2 qodef-col-num--680--1 qodef-col-num--480--1">
 						<div class="qodef-grid-inner clear">
