--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
 						<span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="others.html#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
@@ -540,8 +540,8 @@
 						</span><span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="others.html#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
@@ -549,8 +549,8 @@
 						</span><span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="others.html#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
