--- a/others.html
+++ b/others.html
@@ -1349,17 +1349,8 @@
 											class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 											<a itemprop="url" href="#" target="_blank">
 												<span
-													class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"
-													style=""></span> <svg class="qodef-svg-circle">
-													<circle cx="50%" cy="50%" r="49%"></circle>
-													<circle cx="50%" cy="50%" r="49%"></circle>
-												</svg>
-											</a>
-										</span><span
-											class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
-											<a itemprop="url" href="#" target="_blank">
-												<span class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"
-													style=""></span> <svg class="qodef-svg-circle">
+													class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"></span>
+												<svg class="qodef-svg-circle">
 													<circle cx="50%" cy="50%" r="49%"></circle>
 													<circle cx="50%" cy="50%" r="49%"></circle>
 												</svg>
@@ -1368,8 +1359,18 @@
 											class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 											<a itemprop="url" href="#" target="_blank">
 												<span
-													class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"
-													style=""></span> <svg class="qodef-svg-circle">
+													class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"></span>
+												<svg class="qodef-svg-circle">
+													<circle cx="50%" cy="50%" r="49%"></circle>
+													<circle cx="50%" cy="50%" r="49%"></circle>
+												</svg>
+											</a>
+										</span><span
+											class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
+											<a itemprop="url" href="#" target="_blank">
+												<span
+													class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"></span>
+												<svg class="qodef-svg-circle">
 													<circle cx="50%" cy="50%" r="49%"></circle>
 													<circle cx="50%" cy="50%" r="49%"></circle>
 												</svg>
@@ -1451,8 +1452,8 @@
 						<span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_facebook qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
@@ -1460,8 +1461,8 @@
 						</span><span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_twitter qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
@@ -1469,8 +1470,8 @@
 						</span><span
 							class="qodef-shortcode qodef-m  qodef-icon-holder  qodef-predefined-layout--custom  qodef-layout--normal">
 							<a itemprop="url" href="#" target="_blank">
-								<span class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"
-									style=""></span> <svg class="qodef-svg-circle">
+								<span class="qodef-icon-elegant-icons social_linkedin qodef-icon qodef-e"></span> <svg
+									class="qodef-svg-circle">
 									<circle cx="50%" cy="50%" r="49%"></circle>
 									<circle cx="50%" cy="50%" r="49%"></circle>
 								</svg>
