--- a/others.html
+++ b/others.html
@@ -398,12 +398,12 @@
 													</div>
 													<div class="swiper-slide">
 														<div class="swiper-item"
-															style="background-image: url(assets/img/h11-rev-background-img.png);">
+															style="background-image: url(assets/img/banner02.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">About Us
+																<div class="swiper-title">INTEGRITY IS THE KEY TO
+																	SUCCESS.
 																</div>
 																<div class="swiper-description">
-																	We develop people with quality training.
 																</div>
 																<a href="others.html#About-us"
 																	class="banner-btn">Details</a>
@@ -412,12 +412,13 @@
 													</div>
 													<div class="swiper-slide">
 														<div class="swiper-item"
-															style="background-image: url(assets/img/h11-rev-background-img.png);">
+															style="background-image: url(assets/img/banner03.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">Our Expertise
+																<div class="swiper-title">
+																	WE ARE DRIVEN BY QUALITY AND RESULT.
+
 																</div>
 																<div class="swiper-description">
-																	WE ARE DRIVEN BY QUALITY AND RESULT.
 																</div>
 																<a href="others.html#Expertise"
 																	class="banner-btn">Details</a>
@@ -426,14 +427,15 @@
 													</div>
 													<div class="swiper-slide">
 														<div class="swiper-item"
-															style="background-image: url(assets/img/h11-rev-background-img.png);">
+															style="background-image: url(assets/img/banner04.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">Global Reach
+																<div class="swiper-title">WE HELP CHINESE COMPANIES TO
+																	GO GLOBAL WITH OUR
+																	INTERNATIONAL NETWORKS.
 
 																</div>
 																<div class="swiper-description">
-																	WE HELP CHINESE COMPANIES TO GO GLOBAL WITH OUR
-																	INTERNATIONAL NETWORKS.
+
 																</div>
 																<a href="others.html#Global"
 																	class="banner-btn">Details</a>
@@ -442,12 +444,13 @@
 													</div>
 													<div class="swiper-slide">
 														<div class="swiper-item"
-															style="background-image: url(assets/img/h11-rev-background-img.png);">
+															style="background-image: url(assets/img/banner05.png);">
 															<div class="swiper-body">
-																<div class="swiper-title">Why YUEBEI
+																<div class="swiper-title">We commit to be your trusted
+																	partner
 																</div>
 																<div class="swiper-description">
-																	We commit to be your trusted partner
+
 																</div>
 																<a href="others.html#Why" class="banner-btn">Details</a>
 															</div>
