--- a/others.html
+++ b/others.html
@@ -176,6 +176,35 @@
 				font-size: 16px;
 			}
 		}
+
+		.qodef-menu-item-text {
+			font-size: 12px;
+
+		}
+
+		.swiper-title {
+			text-transform: uppercase
+		}
+
+		.qodef-m-subtitle-justify {
+			/* text-align: justify;
+			text-align-last: justify; */
+		}
+
+		.qodef-m-subtitle {
+			font-size: 16px !important;
+		}
+
+		.special-bar>.elementor-widget-wrap {
+			padding: 60px;
+			border-radius: 4px; 
+			background-color: rgba(33, 33, 33, .4);
+		}
+
+		/* .qodef-h1,
+		h1 {
+			font-size: 36px;
+		} */
 	</style>
 	<link rel="stylesheet" href="assets/css/7b1e8.css" media="all" />
 	<link rel='stylesheet' id='google-fonts-1-css'
@@ -226,7 +255,7 @@
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
 												<a href="others.html#Search"><span
-														class="qodef-menu-item-text">Executive</span></a>
+														class="qodef-menu-item-text">Executive Search</span></a>
 											</li>
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
@@ -263,7 +292,7 @@
 							<li
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-28 menu-item-has-children menu-item-25 qodef-menu-item--narrow">
 								<a href="JavaScript:void(0)"><span class="qodef-menu-item-text"><i class="icon_globe-2"
-											style="font-size: 20px;"></i></span></a>
+											style="font-size: 20px;"></i></span>-<span>Language</span></a>
 								<div class="qodef-drop-down-second">
 									<div class="qodef-drop-down-second-inner">
 										<ul class="sub-menu">
@@ -329,8 +358,8 @@
 									<ul class="sub-menu">
 										<li
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
-											<a href="others.html#Search"><span
-													class="qodef-menu-item-text">Executive</span></a>
+											<a href="others.html#Search"><span class="qodef-menu-item-text">Executive
+													Search</span></a>
 										</li>
 										<li
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
@@ -391,7 +420,7 @@
 																		src="assets/img/h11-rev-img-2.png" alt="">
 																</div>
 																<div class="swiper-description">
-																	Empower Your Business Through Our People Expertise
+																	EMPOWER YOUR BUSINESS THROUGH OUR PEOPLE EXPERTISE
 																</div>
 															</div>
 														</div>
@@ -401,7 +430,7 @@
 															style="background-image: url(assets/img/banner02.png);">
 															<div class="swiper-body">
 																<div class="swiper-title">INTEGRITY IS THE KEY TO
-																	SUCCESS.
+																	SUCCESS
 																</div>
 																<div class="swiper-description">
 																</div>
@@ -415,7 +444,7 @@
 															style="background-image: url(assets/img/banner03.png);">
 															<div class="swiper-body">
 																<div class="swiper-title">
-																	WE ARE DRIVEN BY QUALITY AND RESULT.
+																	WE ARE DRIVEN BY QUALITY AND RESULT
 
 																</div>
 																<div class="swiper-description">
@@ -431,7 +460,7 @@
 															<div class="swiper-body">
 																<div class="swiper-title">WE HELP CHINESE COMPANIES TO
 																	GO GLOBAL WITH OUR
-																	INTERNATIONAL NETWORKS.
+																	INTERNATIONAL NETWORKS
 
 																</div>
 																<div class="swiper-description">
@@ -489,7 +518,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b298281"
 														data-id="b298281" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar ">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-cdd205f elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="cdd205f" data-element_type="widget"
@@ -501,7 +531,7 @@
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">About Us
 																			</h1>
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				<span>
 																					Headquartered in Shanghai, China,
@@ -799,7 +829,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b298281"
 														data-id="b298281" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-cdd205f elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="cdd205f" data-element_type="widget"
@@ -819,7 +850,7 @@
 																					difference.</span>
 																			</div>
 
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
 																				<span>YUEBEI
@@ -836,7 +867,7 @@
 																					assessment processes.</span></div>
 
 
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
 																				<span>
@@ -890,6 +921,11 @@
 																					WITH OUR INTERNATIONAL
 																					NETWORKS.</span>
 																			</div>
+																			<div class="qodef-m-subtitle"
+																				style="margin-top: 30px;color: #FFFFFF">
+																				<img src="./assets/img/yp_map.png"
+																					alt="" srcset="">
+																			</div>
 																		</div>
 																	</div>
 																</div>
@@ -912,7 +948,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b298281"
 														data-id="b298281" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-cdd205f elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="cdd205f" data-element_type="widget"
@@ -931,8 +968,8 @@
 																					help bring out your best
 																					self.</span>
 																			</div>
-																			<div class="qodef-m-subtitle"
-																				style="margin-top: 17px;color: #FFFFFF">
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
+																				style="margin-top: 17px;color: #FFFFFF;">
 
 																				<span>With
 																					ICF certified holistic
@@ -1010,7 +1047,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b298281"
 														data-id="b298281" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-cdd205f elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="cdd205f" data-element_type="widget"
@@ -1029,7 +1067,7 @@
 																					develop people with quality
 																					training.</span>
 																			</div>
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
 																				<span>YUEBEI
@@ -1047,7 +1085,7 @@
 																				<br>
 																				<span>YUEBEI
 																					Signature Courses:</span></div>
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				Seven habits of efficient people |
 																				winning leadership | corporate culture
@@ -1096,7 +1134,7 @@
 																					help enhance your
 																					productivity.</span>
 																			</div>
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 30px;color: #FFFFFF">
 																				<span>
 																					YUEBEI’s HR Consulting services
@@ -1129,7 +1167,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-a81eeb1"
 														data-id="a81eeb1" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-9d0f610 elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="9d0f610" data-element_type="widget"
@@ -1144,7 +1183,7 @@
 																				style="margin-top: 17px;color: #e98b3a; ">
 																				We help connect the world with china.
 																			</div>
-																			<div class="qodef-m-subtitle"
+																			<div class="qodef-m-subtitle-justify qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 
 																				<span>YUEBEI
@@ -1248,7 +1287,8 @@
 													<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-a81eeb1"
 														data-id="a81eeb1" data-element_type="column"
 														data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-														<div class="elementor-column-wrap elementor-element-populated">
+														<div
+															class="elementor-column-wrap elementor-element-populated special-bar">
 															<div class="elementor-widget-wrap">
 																<div class="elementor-element elementor-element-9d0f610 elementor-widget__width-initial elementor-widget-tablet__width-inherit elementor-widget elementor-widget-borgholm_core_section_title"
 																	data-id="9d0f610" data-element_type="widget"
@@ -1310,8 +1350,7 @@
 			<div id="qodef-page-footer-top-area">
 				<div id="qodef-page-footer-top-area-inner" class="qodef-content-grid">
 					<div class="qodef-footer-logo">
-						<img width="324" src="assets/img/logo-light-image.png" class="attachment-full size-full"
-							alt="a" /></div>
+						<img width="324" src="assets/img/CQR.png" class="attachment-full size-full" alt="a" /></div>
 					<div
 						class="qodef-grid qodef-layout--columns qodef-responsive--custom qodef-col-num--3 qodef-col-num--768--2 qodef-col-num--680--1 qodef-col-num--480--1">
 						<div class="qodef-grid-inner clear">
@@ -1320,7 +1359,7 @@
 									<h5 class="qodef-widget-title">Contact</h5>
 									<div class="textwidget">
 										<p style="margin: 0; font-size: 11px; letter-spacing: 0.2em; font-weight: 500;">
-											Anna XUE</p>
+											7th floor, 428 South Yanggao Rd., Pudong, Shanghai</p>
 										</p>
 									</div>
 								</div>
