--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
 				font-size: 16px;
 			}
 		}
+
+		.qodef-menu-item-text {
+			font-size: 12px;
+		}
+
+		.swiper-title {
+			text-transform: uppercase
+		}
 	</style>
 	<link rel="stylesheet" href="assets/css/7b1e8.css" media="all" />
 	<link rel='stylesheet' id='google-fonts-1-css'
@@ -227,7 +235,7 @@
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
 												<a href="others.html#Search"><span
-														class="qodef-menu-item-text">Executive</span></a>
+														class="qodef-menu-item-text">Executive Search</span></a>
 											</li>
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
@@ -264,7 +272,7 @@
 							<li
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-28 menu-item-has-children menu-item-25 qodef-menu-item--narrow">
 								<a href="JavaScript:void(0)"><span class="qodef-menu-item-text"><i class="icon_globe-2"
-											style="font-size: 20px;"></i></span></a>
+											style="font-size: 20px;"></i></span>-<span>Language</span></a>
 								<div class="qodef-drop-down-second">
 									<div class="qodef-drop-down-second-inner">
 										<ul class="sub-menu">
@@ -330,8 +338,8 @@
 									<ul class="sub-menu">
 										<li
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
-											<a href="others.html#Search"><span
-													class="qodef-menu-item-text">Executive</span></a>
+											<a href="others.html#Search"><span class="qodef-menu-item-text">Executive
+													Search</span></a>
 										</li>
 										<li
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
@@ -392,7 +400,7 @@
 																		src="assets/img/h11-rev-img-2.png" alt="">
 																</div>
 																<div class="swiper-description">
-																	Empower Your Business Through Our People Expertise
+																	EMPOWER YOUR BUSINESS THROUGH OUR PEOPLE EXPERTISE
 																</div>
 															</div>
 														</div>
@@ -402,7 +410,7 @@
 															style="background-image: url(assets/img/banner02.png);">
 															<div class="swiper-body">
 																<div class="swiper-title">INTEGRITY IS THE KEY TO
-																	SUCCESS.
+																	SUCCESS
 																</div>
 																<div class="swiper-description">
 																</div>
@@ -416,7 +424,7 @@
 															style="background-image: url(assets/img/banner03.png);">
 															<div class="swiper-body">
 																<div class="swiper-title">
-																	WE ARE DRIVEN BY QUALITY AND RESULT.
+																	WE ARE DRIVEN BY QUALITY AND RESULT
 
 																</div>
 																<div class="swiper-description">
@@ -432,7 +440,7 @@
 															<div class="swiper-body">
 																<div class="swiper-title">WE HELP CHINESE COMPANIES TO
 																	GO GLOBAL WITH OUR
-																	INTERNATIONAL NETWORKS.
+																	INTERNATIONAL NETWORKS
 
 																</div>
 																<div class="swiper-description">
