--- a/others.html
+++ b/others.html
@@ -162,6 +162,12 @@
 			box-shadow: 0 0 2px rgba(255, 255, 255, .45);
 		}
 
+		.special-bar>.elementor-widget-wrap {
+			padding: 60px;
+			border-radius: 4px;
+			background-color: rgba(33, 33, 33, .4);
+		}
+
 		@media screen and (max-width: 768px) {
 			.swiper-item .swiper-body {
 				top: 50%;
@@ -174,6 +180,10 @@
 
 			.swiper-item .swiper-body .swiper-description {
 				font-size: 16px;
+			}
+
+			.special-bar>.elementor-widget-wrap {
+				padding: 20px;
 			}
 		}
 
@@ -195,11 +205,7 @@
 			font-size: 16px !important;
 		}
 
-		.special-bar>.elementor-widget-wrap {
-			padding: 60px;
-			border-radius: 4px; 
-			background-color: rgba(33, 33, 33, .4);
-		}
+
 
 		/* .qodef-h1,
 		h1 {
@@ -1350,7 +1356,7 @@
 			<div id="qodef-page-footer-top-area">
 				<div id="qodef-page-footer-top-area-inner" class="qodef-content-grid">
 					<div class="qodef-footer-logo">
-						<img width="324" src="assets/img/CQR.png" class="attachment-full size-full" alt="a" /></div>
+						<img width="324" src="assets/img/CQR.jpg" class="attachment-full size-full" alt="a" /></div>
 					<div
 						class="qodef-grid qodef-layout--columns qodef-responsive--custom qodef-col-num--3 qodef-col-num--768--2 qodef-col-num--680--1 qodef-col-num--480--1">
 						<div class="qodef-grid-inner clear">
