--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 											</li>
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-309">
-												<a href="javascript:void(0)"><span
+												<a href="index-cn.html"><span
 														class="qodef-menu-item-text">中文简体</span></a></li>
 										</ul>
 									</div>
