--- a/others-cn.html
+++ b/others-cn.html
@@ -565,7 +565,7 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--center   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				Our Expertise
+																				悦倍专长
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
